--- a/index.html
+++ b/index.html
@@ -262,49 +262,49 @@
                     <h3>Reformed Theologians</h3>
                     
                     <div class="theologian-list">
-                        <div class="theologian-card" data-query="What did John Calvin teach about this topic?">
+                        <div class="theologian-card" data-query="What did John Calvin teach about justification by faith?">
                             <h4>John Calvin</h4>
                             <span class="years">1509-1564</span>
                             <p>French Reformer and systematic theologian</p>
                         </div>
 
-                        <div class="theologian-card" data-query="What did Martin Luther teach about this topic?">
+                        <div class="theologian-card" data-query="What did Martin Luther teach about salvation by grace alone?">
                             <h4>Martin Luther</h4>
                             <span class="years">1483-1546</span>
                             <p>German professor and catalyst of the Reformation</p>
                         </div>
 
-                        <div class="theologian-card" data-query="What did Augustine teach about this topic?">
+                        <div class="theologian-card" data-query="What did Augustine teach about predestination and grace?">
                             <h4>St. Augustine</h4>
                             <span class="years">354-430</span>
                             <p>Early church father and theologian</p>
                         </div>
 
-                        <div class="theologian-card" data-query="What did R.C. Sproul teach about this topic?">
+                        <div class="theologian-card" data-query="What did R.C. Sproul teach about the holiness of God?">
                             <h4>R.C. Sproul</h4>
                             <span class="years">1939-2017</span>
                             <p>Reformed theologian and apologist</p>
                         </div>
 
-                        <div class="theologian-card" data-query="What does John Piper teach about this topic?">
+                        <div class="theologian-card" data-query="What does John Piper teach about Christian hedonism and God's glory?">
                             <h4>John Piper</h4>
                             <span class="years">1946-present</span>
                             <p>Reformed Baptist pastor and author</p>
                         </div>
 
-                        <div class="theologian-card" data-query="What does Wayne Grudem teach about this topic?">
+                        <div class="theologian-card" data-query="What does Wayne Grudem teach about systematic theology?">
                             <h4>Wayne Grudem</h4>
                             <span class="years">1948-present</span>
                             <p>Systematic theologian and author</p>
                         </div>
 
-                        <div class="theologian-card" data-query="What did Tim Keller teach about this topic?">
+                        <div class="theologian-card" data-query="What did Tim Keller teach about the gospel and cultural engagement?">
                             <h4>Tim Keller</h4>
                             <span class="years">1950-2023</span>
                             <p>Pastor, theologian, and apologist</p>
                         </div>
 
-                        <div class="theologian-card" data-query="What does D.A. Carson teach about this topic?">
+                        <div class="theologian-card" data-query="What does D.A. Carson teach about biblical theology?">
                             <h4>D.A. Carson</h4>
                             <span class="years">1946-present</span>
                             <p>Biblical scholar and theologian</p>
